--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,15 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <!--  tcleyman -- added mongodb dependency
+    
+    note scope here is compile. 
+     -->
+    <dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>mongo-java-driver</artifactId>
+    	<version>2.9.1</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
