--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,15 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>bakkerij</groupId>
   <artifactId>bakkerij</artifactId>
-  <packaging>war</packaging>
+  <packaging>war</packaging> <!-- packaging element if you want choose ear  -->
   <version>1.0</version>
   <name>bakkerij</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
+    <myproperty>1</myproperty>
+    <!-- to use do ${myproperty} -->
   </properties>
   <dependencies>
     <dependency>
@@ -19,15 +21,12 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
-    <!--  tcleyman -- added mongodb dependency
-    
-    note scope here is compile. 
-     -->
-    <dependency>
+    <!--added mongodb dependency, done by tcleyman -->
+   <!--   <dependency>
     	<groupId>org.mongodb</groupId>
     	<artifactId>mongo-java-driver</artifactId>
     	<version>2.9.1</version>
-    </dependency>
+    </dependency>-->
   </dependencies>
   <profiles>
     <profile>
@@ -36,6 +35,24 @@
      <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
      <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
      <id>openshift</id>
+     <build>
+        <finalName>bakkerij</finalName>
+        <plugins>
+          <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.1.1</version>
+            <configuration>
+              <outputDirectory>deployments</outputDirectory>
+              <warName>ROOT</warName>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+      <profile>
+     <!-- use this profile for internal testing. -->
+     <!-- this to test internally -->
+     <id>tomsprofile</id>
      <build>
         <finalName>bakkerij</finalName>
         <plugins>
