--- a/src/main/java/resources/application.properties
+++ b/src/main/java/resources/application.properties
@@ -1,3 +1,6 @@
+###############################################################################
+# Copyright (c) 2014 Tom Cleymans
+###############################################################################
 # -- welcome --
 welcomeTitle=JSF Blank Application
 
