--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,17 @@
     	<artifactId>mongo-java-driver</artifactId>
     	<version>2.9.1</version>
     </dependency>-->
+   <dependency>
+   	<groupId>junit</groupId>
+   	<artifactId>junit</artifactId>
+   	<version>4.12</version>
+   </dependency>
+   <dependency>
+   	<groupId>org.codehaus.mojo</groupId>
+   	<artifactId>findbugs-maven-plugin</artifactId>
+   	<version>3.0.0</version>
+   	<type>maven-plugin</type>
+   </dependency>
   </dependencies>
   <profiles>
     <profile>
@@ -68,4 +79,13 @@
       </build>
     </profile>
   </profiles>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.codehaus.mojo</groupId>
+  			<artifactId>findbugs-maven-plugin</artifactId>
+  			<version>3.0.0</version>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
