--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
   <name>bakkerij</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
     <myproperty>1</myproperty>
     <!-- to use do ${myproperty} -->
   </properties>
@@ -31,6 +31,7 @@
    	<groupId>junit</groupId>
    	<artifactId>junit</artifactId>
    	<version>4.12</version>
+   	<scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.codehaus.mojo</groupId>
@@ -87,6 +88,23 @@
   			<artifactId>findbugs-maven-plugin</artifactId>
   			<version>3.0.0</version>
   		</plugin>
+  		  <!-- same here, this can be used to find errors in coding  -->
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-pmd-plugin</artifactId>
+  			<version>3.3</version>
+  			<executions>
+  				<execution>
+  					<phase>site</phase>
+  					<goals>
+  						<goal>pmd</goal>
+  					</goals>
+  				</execution>
+  			</executions>
+  		</plugin>
   	</plugins>
   </build>
+  <organization>
+  	<name>tcleyman</name>
+  </organization>
 </project>
