--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app metadata-complete="false" version="3.0"
- xmlns="http://java.sun.com/xml/ns/javaee"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
- <context-param>
-  <param-name>javax.faces.CONFIG_FILES</param-name>
-  <param-value>/faces-config.xml</param-value>
- </context-param>
- <!--  entry required for faces Servlet:  -->
- <servlet>
-  <servlet-name>FacesServlet</servlet-name>
-  <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
- </servlet>
- <!-- every xhtml page will go through the FacesServlet -->
- <servlet-mapping>
-  <servlet-name>FacesServlet</servlet-name>
-  <url-pattern>*.xhtml</url-pattern>
- </servlet-mapping>
- <welcome-file-list>
-  <welcome-file>mainPage.xhtml</welcome-file>
- </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" metadata-complete="false" version="3.0">
+  <context-param>
+    <param-name>javax.faces.CONFIG_FILES</param-name>
+    <param-value>/faces-config.xml</param-value>
+  </context-param>
+  <servlet>
+    <servlet-name>FacesServlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FacesServlet</servlet-name>
+    <url-pattern>*.xhtml</url-pattern>
+  </servlet-mapping>
+  <welcome-file-list>
+    <welcome-file>mainPage.xhtml</welcome-file>
+  </welcome-file-list>
 </web-app>
