--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
    	<version>3.0.0</version>
    	<type>maven-plugin</type>
    </dependency>
+   <dependency>
+   	<groupId>org.jboss.arquillian.junit</groupId>
+   	<artifactId>arquillian-junit-core</artifactId>
+   	<version>1.1.5.Final</version>
+   </dependency>
   </dependencies>
   <profiles>
     <profile>
