--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
    	<artifactId>findbugs-maven-plugin</artifactId>
    	<version>3.0.0</version>
    	<type>maven-plugin</type>
+   	<scope>test</scope>
    </dependency>
   
    <dependency>
@@ -36,6 +37,7 @@
    	<artifactId>jboss-javaee-6.0-with-tools</artifactId>
    	<version>1.0.7.Final</version>
    	<type>pom</type>
+   	<scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>javax.enterprise</groupId>
@@ -95,6 +97,7 @@ Transactional(JTA) JPA from JUnit/TestNG -->
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
   <build>
