--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
 	<packaging>war</packaging> <!-- packaging element if you want choose ear -->
 	<version>1.0</version>
 	<name>bakkerij</name>
+	<parent>
+	<!-- reference to parent pom, will put dependencies there -->
+	<groupId>bakkerij</groupId>
+	<artifactId>bakkerij_parent</artifactId>
+	<version>1.0</version>
+	<relativePath>./myparent/pom.xml</relativePath>
+	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -14,69 +21,11 @@
 		<!-- to use do ${myproperty} -->
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-6.0</artifactId>
-			<version>1.0.0.Final</version>
-			<type>pom</type>
-			<scope>provided</scope>
-		</dependency>
 		<!--added mongodb dependency, done by tcleyman -->
 		<!-- <dependency> <groupId>org.mongodb</groupId> <artifactId>mongo-java-driver</artifactId> 
 			<version>2.9.1</version> </dependency> -->
-   <dependency>
-   	<groupId>org.codehaus.mojo</groupId>
-   	<artifactId>findbugs-maven-plugin</artifactId>
-   	<version>3.0.0</version>
-   	<type>maven-plugin</type>
-   	<scope>test</scope>
-   </dependency>
-  
-   <dependency>
-   	<groupId>org.jboss.bom</groupId>
-   	<artifactId>jboss-javaee-6.0-with-tools</artifactId>
-   	<version>1.0.7.Final</version>
-   	<type>pom</type>
-   	<scope>provided</scope>
-   </dependency>
-   <dependency>
-   	<groupId>javax.enterprise</groupId>
-   	<artifactId>cdi-api</artifactId>
-   	<version>1.2</version>
-   	<scope>provided</scope>
-   </dependency>
-   <dependency>
-   	<groupId>org.jboss.spec.javax.annotation</groupId>
-   	<artifactId>jboss-annotations-api_1.1_spec</artifactId>
-   	<version>1.0.1.Final</version>
-   	<scope>provided</scope>
-   </dependency>
-   <dependency>
-   	<groupId>org.hibernate.javax.persistence</groupId>
-   	<artifactId>hibernate-jpa-2.0-api</artifactId>
-   	<version>1.0.1.Final</version>
-   	<scope>provided</scope>
-   </dependency>
-   <dependency>
-   	<groupId>org.jboss.spec.javax.ejb</groupId>
-   	<artifactId>jboss-ejb-api_3.1_spec</artifactId>
-   	<version>1.0.2.Final</version>
-   	<scope>provided</scope>
-   </dependency>
    
    
- <dependency>
-<groupId>org.hibernate</groupId>
-<artifactId>hibernate-validator</artifactId>
-<version>4.2.0.Final</version>
-<scope>provided</scope>
-<exclusions>
-<exclusion>
-<groupId>org.slf4j</groupId>
-<artifactId>slf4j-api</artifactId>
-</exclusion>
-</exclusions>
-</dependency>
     <!-- Needed for running tests (you may also use TestNG) -->
   
 <!-- Optional, but highly recommended -->
@@ -92,14 +41,7 @@ Transactional(JTA) JPA from JUnit/TestNG -->
 <artifactId>arquillian-protocol-servlet</artifactId>
 <scope>test</scope>
 </dependency>-->
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+</dependencies>
   <build>
   	<plugins>
   	    <!-- should be run when site goal is invoked -->
