--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 	<version>1.0</version>
 	<name>bakkerij</name>
 	<parent>
-	<!-- reference to parent pom, will put dependencies there -->
-	<groupId>bakkerij</groupId>
-	<artifactId>bakkerij_parent</artifactId>
-	<version>1.0</version>
-	<relativePath>./myparent/pom.xml</relativePath>
+		<!-- reference to parent pom, will put dependencies there -->
+		<groupId>bakkerij</groupId>
+		<artifactId>bakkerij_parent</artifactId>
+		<version>1.0</version>
+		<relativePath>./myparent/pom.xml</relativePath>
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,98 +24,95 @@
 		<!--added mongodb dependency, done by tcleyman -->
 		<!-- <dependency> <groupId>org.mongodb</groupId> <artifactId>mongo-java-driver</artifactId> 
 			<version>2.9.1</version> </dependency> -->
-   
-   
-    <!-- Needed for running tests (you may also use TestNG) -->
-  
-<!-- Optional, but highly recommended -->
-<!-- Arquillian allows you to test enterprise code such as EJBs and
-Transactional(JTA) JPA from JUnit/TestNG -->
-<!--  <dependency>
-<groupId>org.jboss.arquillian.junit</groupId>
-<artifactId>arquillian-junit-container</artifactId>
-<scope>test</scope>
-</dependency>-->
-<!--  <dependency>
-<groupId>org.jboss.arquillian.protocol</groupId>
-<artifactId>arquillian-protocol-servlet</artifactId>
-<scope>test</scope>
-</dependency>-->
-</dependencies>
-  <build>
-  	<plugins>
-  	    <!-- should be run when site goal is invoked -->
-  		<plugin>
-  			<groupId>org.codehaus.mojo</groupId>
-  			<artifactId>findbugs-maven-plugin</artifactId>
-  			<version>3.0.0</version>
-  		</plugin>
-  		  <!-- same here, this can be used to find errors in coding  -->
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-pmd-plugin</artifactId>
-  			<version>3.3</version>
-  			<executions>
-  				<execution>
-  					<phase>site</phase>
-  					<goals>
-  						<goal>pmd</goal>
-  					</goals>
-  				</execution>
-  			</executions>
-  		</plugin>
-  		 <!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
-<!-- To use, run: mvn package jboss-as:deploy -->
-<plugin>
-<groupId>org.jboss.as.plugins</groupId>
-<artifactId>jboss-as-maven-plugin</artifactId>
-<version>7.1.0.Final</version>
-</plugin>
-  	</plugins>
-  </build>
 
-  <profiles>
-    <profile>
-     <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
-     <!-- Use this profile for any OpenShift specific customization your app will need. -->
-     <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
-     <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-     <id>openshift</id>
-     <build>
-        <finalName>bakkerij</finalName>
-        <plugins>
-          <plugin>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>2.1.1</version>
-            <configuration>
-              <outputDirectory>deployments</outputDirectory>
-              <warName>ROOT</warName>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-      <profile>
-     <!-- use this profile for internal testing. -->
-     <!-- this to test internally -->
-     <id>tomsprofile</id>
-     <build>
-        <finalName>bakkerij</finalName>
-        <plugins>
-          <plugin>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>2.1.1</version>
-            <configuration>
-              <outputDirectory>deployments</outputDirectory>
-              <warName>ROOT</warName>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
-  <organization>
-  	<name>tcleyman</name>
-  </organization>
+		<!-- Needed for running tests (you may also use TestNG) -->
+
+		<!-- Optional, but highly recommended -->
+		<!-- Arquillian allows you to test enterprise code such as EJBs and Transactional(JTA) 
+			JPA from JUnit/TestNG -->
+		<!-- <dependency> <groupId>org.jboss.arquillian.junit</groupId> <artifactId>arquillian-junit-container</artifactId> 
+			<scope>test</scope> </dependency> -->
+		<!-- <dependency> <groupId>org.jboss.arquillian.protocol</groupId> <artifactId>arquillian-protocol-servlet</artifactId> 
+			<scope>test</scope> </dependency> -->
+	</dependencies>
+	<build>
+		<plugins>
+			<!-- should be run when site goal is invoked -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
+			<!-- same here, this can be used to find errors in coding -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.3</version>
+				<executions>
+					<execution>
+						<phase>site</phase>
+						<goals>
+							<goal>pmd</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
+			<!-- To use, run: mvn package jboss-as:deploy -->
+			<plugin>
+				<groupId>org.jboss.as.plugins</groupId>
+				<artifactId>jboss-as-maven-plugin</artifactId>
+				<version>7.1.0.Final</version>
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<!-- When built in OpenShift the 'openshift' profile will be used when 
+				invoking mvn. -->
+			<!-- Use this profile for any OpenShift specific customization your app 
+				will need. -->
+			<!-- By default that is to put the resulting archive into the 'deployments' 
+				folder. -->
+			<!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+			<id>openshift</id>
+			<build>
+				<finalName>bakkerij</finalName>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.1.1</version>
+						<configuration>
+							<outputDirectory>deployments</outputDirectory>
+							<warName>ROOT</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<!-- use this profile for internal testing. -->
+			<!-- this to test internally -->
+			<id>tomsprofile</id>
+			<build>
+				<finalName>bakkerij</finalName>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.1.1</version>
+						<configuration>
+							<outputDirectory>deployments</outputDirectory>
+							<warName>ROOT</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+	<organization>
+		<name>tcleyman</name>
+	</organization>
 </project>
