--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,14 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<myproperty>1</myproperty>
+		<!-- read tcleyman.WLSPassword from command line
+		-Dtcleyman.WLSPassword=mypassword
+		this should be the password of the WLS admin
+		 -->
+		<WLSPassword>${tcleyman.WLSPassword}</WLSPassword>
 		<!-- to use do ${myproperty} -->
 	</properties>
-	<dependencies>	
+	<dependencies>
 	</dependencies>
 	<build>
 		<plugins>
@@ -94,8 +99,82 @@
 							<warName>ROOT</warName>
 						</configuration>
 					</plugin>
+					<!-- added for deployment on WLS, this for internal test -->
+					<!-- mvn help:describe -DgroupId=com.oracle.weblogic -DartifactId=weblogic-maven-plugin -Dversion=12.1.3-0-0
+					 http://docs.oracle.com/middleware/1213/wls/WLPRG/maven.htm#WLPRG883
+					 -->
+					<plugin>
+						<!-- This is the configuration for the weblogic-maven-plugin -->
+						<groupId>com.oracle.weblogic</groupId>
+						<artifactId>weblogic-maven-plugin</artifactId>
+						<version>12.1.3-0-0</version>
+						<configuration>
+							<middlewareHome>C:\PRODUCTS\WLS1213</middlewareHome>
+						</configuration>
+						<executions>
+							<!-- Execute the appc goal during the package phase -->
+							<execution>
+								<id>wls-appc</id>
+								<phase>package</phase>
+								<goals>
+									<goal>appc</goal>
+								</goals>
+								<configuration>
+									<source>${project.build.directory}/${project.name}.${project.packaging}</source>
+								</configuration>
+							</execution>
+							<!-- Deploy the application to the WebLogic Server in the pre-integration-test 
+								phase -->
+							<execution>
+								<id>wls-deploy</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+								<configuration>
+									<!--The admin URL where the app is deployed. Here use the plugin's 
+										default value t3://localhost:7001 -->
+									<adminurl>t3://127.0.0.1:7001</adminurl>
+									<user>weblogic</user>
+									<password>${WLSPassword}</password>
+									<!--The location of the file or directory to be deployed -->
+									<source>${project.build.directory}/${project.build.finalName}.${project.packaging}</source>
+									<!--The target servers where the application is deployed. Here use 
+										the plugin's default value AdminServer -->
+									<targets>AdminServer</targets>
+									<verbose>true</verbose>
+									<name>${project.build.finalName}</name>
+								</configuration>
+							</execution>
+							<!-- Stop the application in the pre-integration-test phase -->
+							<execution>
+								<id>wls-stop-app</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>stop-app</goal>
+								</goals>
+								<configuration>
+									<adminurl>t3://127.0.0.1:7001</adminurl>
+									<user>weblogic</user>
+									<password>${WLSPassword}</password>
+									<name>${project.build.finalName}</name>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
+			<reporting>
+				<plugins>
+					<!-- this in order to have HTML reports -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-report-plugin</artifactId>
+						<version>2.18.1</version>
+					</plugin>
+				</plugins>
+
+			</reporting>
 		</profile>
 	</profiles>
 
