--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
 										the plugin's default value AdminServer -->
 									<targets>AdminServer</targets>
 									<verbose>true</verbose>
-									<advanced>true</advanced>
+									<!--  <advanced>true</advanced>-->
 									<name>${project.build.finalName}</name>
 								</configuration>
 							</execution>
