--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	metadata-complete="false" version="3.0">
-	<context-param>
-		<param-name>javax.faces.CONFIG_FILES</param-name>
-		<param-value>/faces-config.xml</param-value>
-	</context-param>
-	<servlet>
-		<servlet-name>FacesServlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>FacesServlet</servlet-name>
-		<url-pattern>*.xhtml</url-pattern>
-	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>bakkerij.xhtml</welcome-file>
-	</welcome-file-list>
-	<!-- env entry , can be looked up in code -->
-	<env-entry>
-		<env-entry-name>tcleyman/bakkerij</env-entry-name>
-		<env-entry-type>java.lang.String</env-entry-type>
-		<env-entry-value>bakkerij cleymans</env-entry-value>
-	</env-entry>
+<web-app metadata-complete="false" version="3.0"
+ xmlns="http://java.sun.com/xml/ns/javaee"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+ <context-param>
+  <param-name>javax.faces.CONFIG_FILES</param-name>
+  <param-value>/faces-config.xml</param-value>
+ </context-param>
+ <!-- easier to debug -->
+ <context-param>
+  <param-name>javax.faces.PROJECT_STAGE</param-name>
+  <param-value>Development</param-value>
+ </context-param>
+ <servlet>
+  <servlet-name>FacesServlet</servlet-name>
+  <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+  <load-on-startup>1</load-on-startup>
+ </servlet>
+ <servlet-mapping>
+  <servlet-name>FacesServlet</servlet-name>
+  <url-pattern>*.xhtml</url-pattern>
+ </servlet-mapping>
+ <session-config id="tomsSessionId">
+  <session-timeout>20</session-timeout>
+  <tracking-mode>URL</tracking-mode>
+ </session-config>
+ <welcome-file-list>
+  <welcome-file>bakkerij.xhtml</welcome-file>
+ </welcome-file-list>
+ <!-- env entry , can be looked up in code -->
+ <env-entry>
+  <env-entry-name>tcleyman/bakkerij</env-entry-name>
+  <env-entry-type>java.lang.String</env-entry-type>
+  <env-entry-value>bakkerij cleymans</env-entry-value>
+ </env-entry>
 </web-app>
