--- a/myparent/pom.xml
+++ b/myparent/pom.xml
@@ -23,13 +23,35 @@
 			<scope>provided</scope>
   </dependency>
   
+  <!--  
 	<dependency>
 		<groupId>org.jboss.bom</groupId>
 		<artifactId>jboss-javaee-6.0-with-richfaces</artifactId>
 		<version>1.0.7.Final</version>
 		<type>pom</type>
 
-	</dependency>
+	</dependency>-->
+	
+<!-- 4.1 is I think compatible with JSF 2--> 	
+	<dependency>
+			<groupId>org.richfaces</groupId>
+			<artifactId>richfaces-bom</artifactId>
+			<version>4.1.0.Final</version>
+			<type>pom</type>
+		</dependency>
+	
+	
+	      <dependency>
+        <groupId>org.richfaces.ui</groupId>
+        <artifactId>richfaces-components-ui</artifactId>
+    </dependency> 
+    
+    <dependency>
+        <groupId>org.richfaces.core</groupId>
+        <artifactId>richfaces-core-impl</artifactId>
+    </dependency> 
+
+	
 	
 <!-- need to have a dependency for junit, this means the surefire plugin will use junit -->   
 		<dependency>
