--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
  <servlet>
   <servlet-name>FacesServlet</servlet-name>
   <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-  <load-on-startup>1</load-on-startup>
+  <!--<load-on-startup>1</load-on-startup>-->
   <!--  <load-on-startup>1</load-on-startup>-->
  </servlet>
  <servlet-mapping>
