new attempt for richfaces

--- a/myparent/pom.xml
+++ b/myparent/pom.xml
@@ -48,7 +48,14 @@
 			<scope>provided</scope>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.richfaces.ui</groupId>
+			<artifactId>richfaces-components-ui</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.richfaces.core</groupId>
+			<artifactId>richfaces-core-impl</artifactId>
+		</dependency>
 
 
 
@@ -61,6 +68,8 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+
+
 	</dependencies>
 
 	<!-- others to try - obfuscator - also need to test CDI / EJB junit test 
