--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,10 +11,42 @@
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
+	<!-- tree is saved in a hidden parameter, might save server resources -->
+	<!-- com.sun.faces.VIEW is the hidden field -->
+	<context-param>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>CLIENT</param-value>
+	</context-param>
+	<context-param>
+		<param-name>org.richfaces.SKIN</param-name>
+		<param-value>blueSky</param-value>
+	</context-param>
+	<context-param>
+		<param-name>org.richfaces.CONTROL_SKINNING</param-name>
+		<param-value>enable</param-value>
+	</context-param>
+	
+	
+	<!-- test richfaces -->
+	<filter>
+	<display-name>
+	richFaces Filter</display-name>
+	<filter-name>richfaces</filter-name>
+	<filter-class>org.ajax4jsf.Filter</filter-class></filter>
+	<filter-mapping>
+	
+	<filter-name>richfaces</filter-name>
+	<servlet-name>Faces Servlet</servlet-name>
+	<dispatcher>REQUEST</dispatcher>
+	<dispatcher>FORWARD</dispatcher>
+	<dispatcher>INCLUDE</dispatcher>
+	</filter-mapping>
+	
 	<servlet>
-		<servlet-name>FacesServlet</servlet-name>
+		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>FacesServlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
