--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,9 @@
 	
 	
 	<!-- test richfaces -->
-	<filter>
+	
+	<!-- seems this was required for RF 3.0 only -->
+	<!--  <filter>
 	<display-name>
 	richFaces Filter</display-name>
 	<filter-name>richfaces</filter-name>
@@ -40,7 +42,7 @@
 	<dispatcher>REQUEST</dispatcher>
 	<dispatcher>FORWARD</dispatcher>
 	<dispatcher>INCLUDE</dispatcher>
-	</filter-mapping>
+	</filter-mapping>-->
 	
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
